made the navbar mobilefriendly

--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -1,8 +1,8 @@
 <br>
 <br>
-<h1 class="createOffer" style="margin-top: 20px; margin-left: 20px;">Create Offer</h1>
 
 <mat-card>
+  <h1 style="padding-left: 1rem;">Create Offer</h1>
   <mat-horizontal-stepper #stepper>
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
