--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light shadow-sm p-3 mb-5 rounded" style="height: 80px; margin-left: 12%; margin-right: 12%; background-color: rgb(226, 230, 241)">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light shadow-sm p-3 mb-5 rounded" style="height: 80px; background-color: rgb(226, 230, 241)">
   <a class="navbar-brand" routerLink="/">
-    <img src="assets/icons/eduardologo.png" height="70px" alt="eduardo-logo">
+    <img src="assets/icons/eduardologo.png" height="40px" alt="eduardo-logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
