changed stepper and button colors

--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -104,7 +104,7 @@
       <p>Review offer information and then click create offer</p>
       <div>
         <button mat-button matStepperPrevious>Back</button>
-        <button (click)="onSubmit()" mat-flat-button color="primary" [disabled]="!firstFormGroup.valid||!secondFormGroup.valid||!thirdFormGroup.valid">Create Offer</button>
+        <button (click)="onSubmit()" mat-flat-button color="primary" [disabled]="!firstFormGroup.valid||!secondFormGroup.valid||!thirdFormGroup.valid" [class.color]="firstFormGroup.valid||secondFormGroup.valid||thirdFormGroup.valid">Create Offer</button>
       </div>
     </mat-step>
 
