--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
@@ -17,3 +17,23 @@
   margin-top: 1rem;
   height: 100px;
 }
+
+@media (max-width: 1024px){
+
+
+  body{
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .card{
+    width: 95%;
+    margin-top: 5rem;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: white;
+    border-radius: 1rem;
+  }
+
+
+}
