--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
@@ -1,8 +1,8 @@
 <br>
 <br>
-<h1 class="register" style="margin-top: 20px; margin-left: 20px;">Registration</h1>
 
 <mat-card>
+  <h1 class="register" style="padding-left: 1rem;">Registration</h1>
   <mat-horizontal-stepper #stepper>
     <mat-step [stepControl]="firstFormGroup" errorMessage="Name is required.">
       <form [formGroup]="firstFormGroup">
