--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
@@ -8,7 +8,15 @@
   font-weight: lighter;
 }
 
-
+.mat-icon {
+  background-repeat: no-repeat;
+  display: inline-block;
+  fill: currentColor;
+  height: 24px;
+  width: 24px;
+  align-self: center;
+  margin-right: 20px;
+  }
 
 @media (min-width: 1024px){
 
