make img of products same size

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 <div class="card-group">
   <div class="card">
-    <img [src]="endpointURL + product.picture" class="card-img-top" style="padding: 1rem">
+    <img [src]="endpointURL + product.picture" class="card-img-top img-fluid" style="padding: 1rem">
     <div class="card-body">
       <div>
         <h1 style="float:left; width: 300px;" class="card-title">{{product.title}}<span *ngIf="product.approved" style="margin-left: 15px"><mat-icon>verified</mat-icon></span>
