--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
@@ -5,6 +5,12 @@
     width: 500px;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 20vw;
+  object-fit: cover;
+}
+
 .card-category{
     color:grey;
 }
