--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav ml-auto">
-      <img src = "assets/icons/heart-fill.svg" class="mat-icon" routerLink="/wishlist" [hidden]='!(loggedIn | async)'>
+<!--      <img src = "assets/icons/heart-fill.svg" class="mat-icon" routerLink="/wishlist" [hidden]='!(loggedIn | async)'>-->
+      <a class="nav-link" routerLink="/wishlist" [hidden]='!(loggedIn | async)'><i class="far fa-heart"></i> Wishlist</a>
       <a class="nav-link" routerLink="/admin" [hidden]='!(isAdmin | async)'><i class="far fa-user"></i> Admin</a>
       <a class="nav-link" routerLink="/createOffer" *ngIf='loggedIn | async'><i class="fas fa-plus"></i> Create Offer</a>
       <a class="nav-link" [routerLink]="['/profile', getUserName()]" *ngIf="!(isAdmin | async) && (loggedIn | async)"><i class="far fa-user"></i> My Profile</a>
