--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.css
@@ -1,3 +1,10 @@
-
-
-
+.mat-card{
+    width: 70%;
+    height: auto;
+    display: block;
+    margin-top: 4rem;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: white;
+    border-radius: 1rem;
+  }
