--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -13,7 +13,7 @@
   </button>
   <div class="dropdown-menu scrollable-menu">
     <a class="dropdown-item" href="/catalog/Accessories">Accessories</a>
-    <a class="dropdown-item" href="/catalog/AudioTv">Audio & TV</a>
+    <a class="dropdown-item" href="/catalog/AudioTV">Audio & TV</a>
     <a class="dropdown-item" href="/catalog/Books">Books</a>
     <a class="dropdown-item" href="/catalog/Clothing">Clothing</a>
     <a class="dropdown-item" href="/catalog/Electronics">Electronics</a>
