--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -55,25 +55,37 @@
     </div>
   </div>
 
-  <h1 style="margin-top: 16px;">Recently added in "sell"</h1>
+  <h1 style="margin-top: 16px;">Recently added in "sell"
+    <button class="btn btn-sm" type="button" routerLink="/product-catalog/sell">
+      Show all
+    </button>
+  </h1>
   <div class="row">
-    <div *ngFor="let product of sellProducts | async">
+    <div *ngFor="let product of sellProd | slice:sellProd.length-2:sellProd.length">
       <app-product-item [product] = "product"></app-product-item>
     </div>
   </div>
 
 
-  <h1 style="margin-top: 16px;">Recently added in "lend"</h1>
+  <h1 style="margin-top: 16px;">Recently added in "lend"
+    <button class="btn btn-sm" type="button" routerLink="/product-catalog/lend">
+    Show all
+   </button>
+  </h1>
   <div class="row">
-    <div *ngFor="let product of lendProducts | async">
+    <div *ngFor="let product of lendProd | slice:lendProd.length-2:lendProd.length">
       <app-product-item [product] = "product"></app-product-item>
     </div>
   </div>
 
 
-  <h1 style="margin-top: 16px;">Recently added in "hire"</h1>
+  <h1 style="margin-top: 16px;">Recently added in "hire"
+    <button class="btn btn-sm" type="button" routerLink="/product-catalog/hire">
+    Show all
+    </button>
+  </h1>
   <div class="row">
-    <div *ngFor="let product of hireProducts | async">
+    <div *ngFor="let product of hireProd | slice:hireProd.length-2:hireProd.length">
       <app-product-item [product] = "product"></app-product-item>
     </div>
   </div>
