--- a/ese2020-project-scaffolding-master/frontend/src/app/admin/admin.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
 
 <h1 style="margin-top: 10px">Products to be approved</h1>
 <div class="row">
-  <div *ngFor="let product of products | async" class="col-lg-6">
+  <div *ngFor="let product of products | async" class="col-md-6">
     <app-product-item [product] = "product" ></app-product-item>
   </div>
 </div>
