--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/type-catalog/type-catalog.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/type-catalog/type-catalog.component.html
@@ -3,7 +3,7 @@
 <h1 style="margin-top: 10px">Product Catalog by {{type}}</h1>
 
 <div class="row">
-  <div *ngFor="let product of products | async">
+  <div *ngFor="let product of products | async" class="col-md-6">
       <app-product-item [product]="product"></app-product-item>
   </div>
 </div>
