--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.html
@@ -1,7 +1,26 @@
 <br>
-<div *ngFor="let productInfo of product | async">
-  <app-product-details [productInfo] = "productInfo"></app-product-details>
+
+
+<div class="row">
+  <div *ngFor="let productInfo of product | async" class="col">
+    <app-product-details [productInfo] = "productInfo"></app-product-details>
+  </div>
+
+  <div class="col">
+    <h1>Reviews</h1>
+    <div *ngFor="let review of reviews | async">
+      <div class="card" style="width: 18rem;">
+        <div class="body">
+          <h5 class="card-title">Review from {{review.userName}}</h5>
+          <ngb-rating [rate]="review.rating" max = 5></ngb-rating>
+          <p class="card-text">{{review.reviewText}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
+
 
 <mat-card *ngIf="loggedIn | async">
   <form [formGroup]="formGroup">
@@ -13,16 +32,15 @@
     <br>
     <mat-form-field appearance="fill">
       <mat-label>Review</mat-label>
-      <textarea matInput placeholder="Review" formControlName="reviewText" maxlength="5000" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2"></textarea>
-      <mat-hint mat-align="end">{{reviewText.value.length}} / 5000</mat-hint>
+      <textarea matInput placeholder="Review" formControlName="reviewText" maxlength="100" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2"></textarea>
+      <mat-hint mat-align="end">{{reviewText.value.length}} / 100</mat-hint>
       <mat-error *ngIf="((reviewText.invalid && reviewText.touched) || reviewText.dirty) && reviewText.errors?.required">
         Review is empty
       </mat-error>
-  </mat-form-field>
-  <br>
-  <br>
-  <button mat-raised-button color="primary" (click)="onSubmit()" [disabled]="!formGroup.valid||currentRate==0">Publish Review</button>
+    </mat-form-field>
+    <br>
+    <br>
+    <button mat-raised-button color="primary" (click)="onSubmit()" [disabled]="!formGroup.valid||currentRate==0">Publish Review</button>
   </form>
 </mat-card>
-
 <br>
