improved review design

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.css
@@ -1,4 +1,4 @@
-.mat-card{
+.mat-card {
     width: 50%;
     height: auto;
     display: block;
@@ -8,3 +8,8 @@
     background-color: white;
     border-radius: 1rem;
   }
+
+.mat-icon {
+  vertical-align: middle;
+  margin-right: 10px;
+}
