--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 
-<h1 style="margin-top: 10px">Category Catalog</h1>
+<h1 style="margin-top: 10px">Category Catalog for {{category}}</h1>
 
 <div class="row">
   <div class="col-md-4">
