--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
@@ -1,7 +1,26 @@
 <br>
 <br>
 
-<h1 style="margin-top: 10px">Category Catalog</h1>
+<div class="btn-group">
+  <h1 style="margin-top: 10px; font-weight: bold;">{{category}}</h1>
+  <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    {{category}}
+  </button>
+  <div class="dropdown-menu scrollable-menu">
+    <a class="dropdown-item" href="/catalog/Accessories">Accessories</a>
+    <a class="dropdown-item" href="/catalog/AudioTV">Audio & TV</a>
+    <a class="dropdown-item" href="/catalog/Books">Books</a>
+    <a class="dropdown-item" href="/catalog/Clothing">Clothing</a>
+    <a class="dropdown-item" href="/catalog/Electronics">Electronics</a>
+    <a class="dropdown-item" href="/catalog/Games">Games</a>
+    <a class="dropdown-item" href="/catalog/Animals">Animals</a>
+    <a class="dropdown-item" href="/catalog/ClassesTutoring">Classes & Tutoring</a>
+    <a class="dropdown-item" href="/catalog/ComputerMobilePhones">Computer & Mobile Phones</a>
+    <a class="dropdown-item" href="/catalog/HouseholdCleaning">Household & Cleaning</a>
+    <a class="dropdown-item" href="/catalog/MovingTransport">Moving & Transport</a>
+    <a class="dropdown-item" href="/catalog/PartyCatering">Party & Catering</a>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-md-4">
