--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
       <a class="nav-link" routerLink="/createOffer" *ngIf="!(isAdmin | async) && (loggedIn | async)"><i class="fas fa-plus"></i> Create Offer</a>
       <a class="nav-link" [routerLink]="['/profile', getUserName()]" *ngIf="!(isAdmin | async) && (loggedIn | async)"><i class="far fa-user"></i> My Profile</a>
       <a class="nav-link" routerLink="/login" [hidden]='loggedIn | async'>Login</a>
-      <a class="nav-link" (click)="onLogout()" [hidden]='!(loggedIn | async)'>Logout</a>
+      <a class="nav-link" style="cursor: pointer;" (click)="onLogout()" [hidden]='!(loggedIn | async)'>Logout</a>
       <a class="nav-link" routerLink="/register" [hidden]='loggedIn | async'>Register</a>
     </div>
   </div>
