--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-review/product-review.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-review/product-review.component.css
@@ -1,1 +1,8 @@
-
+.mat-card{
+    height: auto;
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: white;
+    border-radius: 1rem;
+  }
