--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-review/product-review.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-review/product-review.component.html
@@ -1,6 +1,6 @@
-<mat-card>
+<mat-card *ngIf="!isReviewed">
   <form [formGroup]="formGroup">
-    <h3 style="padding-left: 1rem;">Your Review</h3>
+    <h3 style="padding-left: 1rem;">Review Product?</h3>
     <div>
       <ngb-rating max = 5 [(rate)]="currentRate" style="outline: none;"></ngb-rating>
       <b style="margin-left: 10px;">{{currentRate}} /5 stars</b>
